# context-guardian

./: .gitignore  GITHUB-WORKFLOW.md  LICENSE  Makefile  PRODUCTION-READY.md  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  test.yml
docs/: DEPLOYMENT.md
src/context_guardian/: __init__.py  config.py  daemon.py  logger.py  main.py  parser.py
tests/: conftest.py
tests/unit/: test_parser.py
